<resources>
<string name="app_name">RCS-e RI</string>
<string name="menu_address_book">Address book</string>
<string name="menu_eventlog">Event Log</string>
<string name="menu_spambox">Spam box</string>
<string name="menu_settings">Settings</string>
<string name="menu_about">About</string>
<string name="label_ab_not_found">The address book is not found, launch it manually from your device home screen.</string>
<string name="label_presence_service_not_activated">The presence service is not activated</string>
<string name="label_battery_running_low">Battery running low (less than %d%%)\nStopping joyn services</string>
<string name="menu_close_session">Quit</string>
<string name="label_file_size">Size: %1$s%2$s</string>
<string name="label_file_size_unknown">Size: unknown</string>
<string name="label_command_in_progress">Command in progress...</string>
<string name="label_session_has_expired">Session has expired (timeout or any other error)</string>
<string name="label_session_not_yet_started">Session not yet started</string>
<string name="label_not_implemented">Not yet implemented</string>
<string name="label_ims_disconnected">Service has been disconnected from the IMS</string>
<string name="label_api_failed">Call API method has failed</string>
<string name="label_api_disconnected">joyn service has been stopped</string>
<string name="label_api_disabled">joyn service is not started</string>
<string name="label_ok">OK</string>
<string name="label_cancel">Cancel</string>
<string name="label_delete">Delete</string>
<string name="title_msg">Information</string>
<string name="title_picture">Received picture</string>
<string name="label_accept">Accept</string>
<string name="label_decline">Decline</string>
<string name="label_ignore">Ignore</string>
<string name="label_refresh">Refresh</string>
<string name="label_from">From:</string>
<string name="label_invitation_failed">Invitation has failed</string>
<string name="label_yes">Yes</string>
<string name="label_no">No</string>
<string name="label_send">Send</string>
<string name="label_select">Select</string>
<string name="label_receive_image">Received image %s</string>
<string name="label_about_title">RCS-e Reference Implementation</string>
<string name="label_about_release">Release %s</string>
<string name="label_about_api">API %s</string>
<string name="label_about_more_info">More info at http://code.google.com/p/android-rcs-ims-stack/</string>
<string name="menu_capabilities">Capabilities</string>
<string name="menu_my_capabilities">My capabilities</string>
<string name="menu_capabilities_request">Request capabilities</string>
<string name="menu_refresh_capabilities">Refresh all capabilities</string>
<string name="menu_request_capabilities">Request capabilities</string>
<string name="menu_block_capabilities">Block/unblock capabilities</string>
<string name="label_refresh_failed">Could not refresh contacts</string>
<string name="label_refresh_success">Contacts has been refreshed</string>
<string name="label_capabilities">Capabilities:</string>
<string name="label_refresh_all_capabilities">This command permits to force an update of capabilities for each contact in the address book. This may take a long time if there is a lof of contacts.</string>
<string name="label_refresh_in_progress">Refresh in progress...</string>
<string name="label_capabilities_cs_video">CS Video</string>
<string name="label_capabilities_video">Video sharing</string>
<string name="label_capabilities_image">Image sharing</string>
<string name="label_capabilities_ft">File transfer</string>
<string name="label_capabilities_ft_http">File transfer HTTP</string>
<string name="label_capabilities_im">IM session</string>
<string name="label_capabilities_presence_discovery">Presence discovery</string>
<string name="label_capabilities_social_presence">Social presence</string>
<string name="label_capabilities_geolocation_push">Geolocation push</string>
<string name="label_capabilities_file_transfer_thumbnail">File transfer thumbnail</string>
<string name="label_capabilities_file_transfer_sf">File transfer Store &amp; Forward</string>
<string name="label_capabilities_group_chat_sf">Group chat Store &amp; Forward</string>
<string name="label_capabilities_ip_voice_call">IP voice call</string>
<string name="label_capabilities_ip_video_call">IP video call</string>
<string name="label_capabilities_extensions">Extensions:</string>
<string name="label_request_in_background">Request has been sent in background for %s</string>
<string name="label_sip_automata">SIP automata</string>
<string name="menu_presence">Presence</string>
<string name="menu_presence_info">Edit my presence info</string>
<string name="menu_eab">Enhanced Address Book</string>
<string name="menu_manage_contacts">Manage my joyn contacts</string>
<string name="menu_granted_contacts">List of granted contacts</string>
<string name="menu_blocked_contacts">List of blocked contacts</string>
<string name="menu_revoked_contacts">List of revoked contacts</string>
<string name="label_select_presence_status">Select a status</string>
<string name="label_freetext">Freetext:</string>
<string name="label_favoritelink">Favorite link:</string>
<string name="label_photo">Photo icon:</string>
<string name="label_phone_number">Phone number:</string>
<string name="label_contact_type">Type:</string>
<string name="label_last_modified">Last modified:</string>
<string name="label_last_capabilities_modified">Last modified:</string>
<string name="label_presence_status">Presence status:</string>
<string name="label_publish">Publish</string>
<string name="label_select_photo">Select photo</string>
<string name="label_delete_photo">Delete photo</string>
<string name="label_invite">Invite</string>
<string name="label_block">Block</string>
<string name="label_revoke">Revoke</string>
<string name="label_unblock">Unblock</string>
<string name="label_unrevoke">Unrevoke</string>
<string name="label_publish_ok">Publish with success</string>
<string name="label_publish_ko">Publish has failed</string>
<string name="label_invite_contact_ok">Contact has been invited with success</string>
<string name="label_invite_contact_ko">Contact can\'t be invited</string>
<string name="label_block_contact_ok">Contact has been blocked with success</string>
<string name="label_block_contact_ko">Contact can\'t be blocked</string>
<string name="label_revoke_contact_ok">Contact has been revoked with success</string>
<string name="label_revoke_contact_ko">Contact can\'t be revoked</string>
<string name="label_unblock_contact_ok">Contact has been unblocked with success</string>
<string name="label_unblock_contact_ko">Contact can\'t be unblocked</string>
<string name="label_unrevoke_contact_ok">Contact has been unrevoked with success</string>
<string name="label_unrevoke_contact_ko">Contact can\'t be unrevoked</string>
<string name="label_contact_list_failed">Can\'t read XDM server list</string>
<string name="label_list_empty">No item in the list</string>
<string name="label_read_eab_ko">Can\'t read the EAB</string>
<string name="label_request_ok">Request initiated with success</string>
<string name="label_request_ko">Request has failed</string>
<string name="label_browser_bookmarks">Browser bookmarks</string>
<string name="label_predefined_freetext">Pre-defined freetext</string>
<string name="title_presence_invitation">New invitation to share profile</string>
<string name="label_rcs_contact">joyn</string>
<string name="label_normal_contact">Not joyn</string>
<string name="label_presence_capabilities">Capabilities:</string>
<string name="label_presence_info_changed">%s has changed his social presence info</string>
<string name="label_presence_list_empty">Empty result</string>
<string name="title_normal_contact">Contact</string>
<string name="label_not_rcs_capable">This contact is not joyn capable</string>
<string-array name="presence_status_label">
    <item>Available</item>
    <item>Offline</item>
</string-array>
<string name="menu_messaging">Messaging</string>
<string name="menu_sms_mms">Send SMS/MMS</string>
<string name="menu_transfer_file">File transfer</string>
<string name="menu_transfer_file_group">Group file transfer</string>
<string name="menu_one_to_one_chat">One-to-one chat</string>
<string name="menu_adhoc_group_chat">Ad-hoc group chat</string>
<string name="menu_chat_list">Chat history</string>
<string name="menu_block_contact">Block/unblock contact</string>
<string name="label_contact_blocked">%s has been blocked</string>
<string name="label_contact_unblocked">%s has been unblocked</string>
<string name="title_recv_file_transfer">New file transfer invitation</string>
<string name="label_file">Selected file:</string>
<string name="title_recv_chat">New chat invitation</string>
<string name="label_msg">Message:</string>
<string name="label_hint_first_message">Enter first message</string>
<string name="title_chat_view">Chat</string>
<string name="title_chat_view_group">Group chat</string>
<string name="title_chat_view_oneone">Chat with</string>
<string name="title_chat_exit">Are you sure to quit the session?</string>
<string name="title_chat_rejoin">Do you want to rejoin the group chat session?</string>
<string name="label_chat_aborted">Chat session aborted</string>
<string name="menu_insert_smiley">Smiley</string>
<string name="menu_participants">Participants</string>
<string name="menu_add_participant">Add participant</string>
<string name="menu_send_file">Send a file</string>
<string name="menu_group_transfer_file">Send file to group</string>
<string name="menu_wizz">Wizz</string>
<string name="label_send_im_failed">Send IM has failed</string>
<string name="label_chat_failed">Chat session has failed</string>
<string name="label_contacts">Contacts:</string>
<string name="label_contact_is_composing">is typing...</string>
<string name="label_transfer_failed">Transfer has failed or is aborted (error code %d)</string>
<string name="label_transfer_failed_too_big">Transfer is aborted because file is too big</string>
<string name="label_select_contacts">Select contacts</string>
<string name="label_chat_wizz">Wizz</string>
<string name="label_chat_initiation_canceled">Chat session has been canceled</string>
<string name="label_ft_initiation_canceled">File transfer session has been canceled</string>
<string name="label_select_quicktext">Quick text</string>
<string name="menu_quicktext">Quick text</string>
<string name="label_add_participant_success">Request to add participant(s) is successful</string>
<string name="label_add_participant_failed">Request to add participant(s) has failed</string>
<string name="label_receive_delivery_status_displayed">Message has been displayed by %1$s</string>
<string name="label_receive_delivery_status_failed">Message has failed</string>
<string name="label_receive_delivery_status_delivered">Message has been delivered by %1$s</string>
<string name="label_chat_terminated">Chat session terminated</string>
<string name="label_chat_terminated_by_remote">Chat session terminated by remote</string>
<string name="label_group_chat">Group chat</string>
<string name="menu_delete_spam">Delete message</string>
<string name="menu_unspam">Move to my messages</string>
<string name="menu_clear_all_spams">Clear all spams</string>
<string name="label_spam_empty">No spam</string>
<string name="label_continue_chat_failed">Can\'t continue the conversation (service not available)</string>
<string name="label_subject">Subject:</string>
<string name="label_max_participants">Can\'t add participants: max number of participants is reached (max=%d)</string>
<string name="label_rejoin_chat_failed">Can\'t rejoin the conversation (error code %d)</string>
<string name="label_rejoin_chat_exception">Can\'t rejoin the conversation (unexpected exception)</string>
<string name="label_stop_incoming_btn">Stop reception</string>
<string name="label_start_outgoing_btn">Send</string>
<string name="label_stop_outgoing_btn">Stop</string>
</resources>