<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<TableLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1"
	    android:paddingTop="10dip">
	
        <Spinner android:id="@+id/contact"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
	
	    <TableRow android:padding="5dip"></TableRow>
	
		<Button android:text="@string/label_refresh"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
			 android:id="@+id/refresh_btn"/>

		<TableRow android:paddingTop="5dip">
	        <TextView android:text="@string/label_last_capabilities_modified"
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <TextView android:id="@+id/last_capabilities_modified"
	         android:textStyle="bold"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"/>
	    </TableRow>
	
		<TableRow android:paddingTop="5dip">
	        <TextView android:text="@string/label_presence_capabilities"
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <CheckBox android:id="@+id/image_sharing"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
	         android:textStyle="bold"
			 android:enabled="true"
             android:text="@string/label_capabilities_image" />
	    </TableRow>

	    <TableRow>
	        <TextView android:text=""
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <CheckBox android:id="@+id/video_sharing"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
	         android:textStyle="bold"
			 android:enabled="true"
             android:text="@string/label_capabilities_video" />
	    </TableRow>
	    
	    <TableRow>
	        <TextView android:text=""
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <CheckBox android:id="@+id/file_transfer"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
	         android:textStyle="bold"
			 android:enabled="true"
             android:text="@string/label_capabilities_ft" />
	    </TableRow>
	    
	    <TableRow>
	        <TextView android:text=""
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <CheckBox android:id="@+id/im"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
	         android:textStyle="bold"
			 android:enabled="true"
             android:text="@string/label_capabilities_im" />
	    </TableRow>

	    <TableRow>
	        <TextView android:text=""
 			 android:layout_marginLeft="5dip"
	         android:gravity="right"/>
	        <CheckBox android:id="@+id/cs_video"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"
	         android:textStyle="bold"
			 android:enabled="true"
             android:text="@string/label_capabilities_cs_video" />
	    </TableRow>
	
	</TableLayout>
	
</ScrollView>	
