<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal">

	<LinearLayout
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<com.orangelabs.rcs.service.api.client.media.video.VideoSurfaceView
			android:id="@+id/incoming_video_view"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_gravity="center_vertical|center_horizontal"/>
	</LinearLayout>
	<TableLayout
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:gravity="center">
		<TextView android:id="@+id/visio_with_txt"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:layout_gravity="top|center_horizontal"
			android:gravity="center_horizontal"/>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:gravity="center">
			<ImageButton android:src="@drawable/ri_switch_cam"
				android:id="@+id/switch_cam_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="10sp"/>
		</TableRow>
		<com.orangelabs.rcs.service.api.client.media.video.VideoSurfaceView
			android:id="@+id/outgoing_video_preview"
			android:layout_height="120dp"
			android:layout_width="match_parent"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"/>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:gravity="center">
			<Button android:text="@string/label_start_outgoing_btn"
				android:id="@+id/start_outgoing_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="10sp"/>
			<Button android:text="@string/label_stop_outgoing_btn"
				android:id="@+id/stop_outgoing_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="10sp"/>
		</TableRow>
		<Button android:text="@string/label_stop_incoming_btn"
			android:id="@+id/stop_incoming_btn"
			android:layout_marginTop="30dp"
			android:gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="10sp"/>
   </TableLayout>
</LinearLayout>
